[workspace]
members = [
    "stellar_types",
    "stellar_preprocessor",
    "stellar_voyage",
]
resolver = "2"

[workspace.dependencies]
# Pinned exact version — a rkyv mismatch between preprocessor and game
# produces silent data corruption, not a compile error. Never use a range here.
rkyv = { version = "=0.7.44", features = ["alloc", "validation"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck = { version = "1", features = ["derive"] }
memmap2  = "0.9"
tempfile = "3"

# Preprocessor deps — pinned here so both crates always agree
clap = { version = "4", features = ["derive"] }
anyhow = "1"
csv = "1"
rayon = "1"
indicatif = { version = "0.17", features = ["rayon"] }
bincode = "1"